%% Accounts, tenancy & unit transfers
classDiagram
direction LR
class User {
  +int UserID
  +string Username
  +string Password
  +string Role
  +string FirstName
  +string LastName
  +string? ContactNumber
  +bool IsActive
  +bool MustChangePassword
  +bool IsMainAdmin
  +DateTime? LastLoginAt
  +string DisplayName
}
class TenantProfile {
  +int TenantID
  +int? UserID
  +int? UnitID
  +string FirstName
  +string LastName
  +string? ContactNumber
  +string? EmergencyContactName
  +string? EmergencyContactNumber
  +DateTime? MoveInDate
  +DateTime? MoveOutDate
  +DateTime? LeaseStart
  +DateTime? LeaseEnd
  +decimal AdvanceCredit
  +string Status
  +string? PhotoPath
  +string FullName
}
class Unit {
  +int UnitID
  +string UnitNumber
  +string UnitType
  +decimal RentPrice
  +decimal Deposit
  +decimal AdvancePayment
  +int Capacity
  +string Status
}
class TenantUnitAssignment {
  +long AssignmentID
  +int TenantID
  +int UnitID
  +DateTime? MoveInDate
  +DateTime? MoveOutDate
  +DateTime? LeaseStart
  +DateTime? LeaseEnd
  +string Status
}
class UnitTransferRequest {
  +int TransferID
  +int TenantID
  +int? CurrentUnitID
  +int RequestedUnitID
  +string Reason
  +string Status
  +DateTime DateRequested
  +DateTime? DateReviewed
  +DateTime? TenantArchivedAt
  +DateTime? StaffArchivedAt
}
User "1" -- "0..1" TenantProfile : account
TenantProfile "0..*" -- "0..1" Unit : current unit
TenantProfile "1" -- "0..*" TenantUnitAssignment : history
Unit "1" -- "0..*" TenantUnitAssignment : assigned unit
TenantProfile "1" -- "0..*" UnitTransferRequest : requests
Unit "1" -- "0..*" UnitTransferRequest : requested unit
Unit "0..1" -- "0..*" UnitTransferRequest : previous unit
